...
  };
  const selectLiftIndex = index => {
    setLiftIndex(index);
    setIsVisible(false);
  };

  return (
    <SafeAreaView style={{ flex: 1, backgroundColor: "#ffffff" }}>
      <KeyboardAwareScrollView onPress={Keyboard.dismiss}>
        <ScrollView style={styles.container}>
          <View style={{ paddingTop: 30, marginLeft: 20, marginRight: 20 }}>
            <Text>House Type*</Text>
            <View style={styles.propSubSection}>
...
                mode="outlined"
                style={[
                  styles.inputContainerStyle,
                  { width: "20%", backgroundColor: "#ffffff" }
                ]}
                label="Floor*"
                placeholder="Floor"
                value={floor}
                keyboardType={"numeric"}
                returnKeyType={"done"}
                onChangeText={text => setFloor(text)}
                onFocus={() => setIsVisible(false)}
                theme={{
...
                  styles.inputContainerStyle,
                  { width: "30%", backgroundColor: "#ffffff" }
                ]}
                keyboardType={"numeric"}
                returnKeyType={"done"}
                label="Total Floor*"
                placeholder="Total Floor"
                value={totalFloor}
                keyboardType={"numeric"}
                onChangeText={text => setTotalFloor(text)}
                onFocus={() => setIsVisible(false)}
                theme={{
                  colors: {
...
            <TextInput
              mode="outlined"
              style={styles.inputContainerStyle}
              label="Property Size*"
              keyboardType={"numeric"}
              returnKeyType={"done"}
              placeholder="Property Size"
              value={propertySize}
              keyboardType={"numeric"}
              onChangeText={text => setPropertySize(text)}
              onFocus={() => setIsVisible(false)}
              theme={{
                colors: {
...
                  background: "#ffffff"
                }
              }}
            />

            <View style={{ marginTop: 15 }}>
              <Button title="NEXT" onPress={() => onSubmit()} />
            </View>
          </View>
        </ScrollView>
      </KeyboardAwareScrollView>
      <Snackbar
        visible={isVisible}
        textMessage={errorMessage}
        position={"top"}
        actionHandler={() => dismissSnackBar()}
        actionText="OK"
      />
    </SafeAreaView>
  );
};

const styles = StyleSheet.create({
...
