...
          // }
        }}
      />
      <Stack.Screen
        name="LocalityDetailsForm"
        component={LocalityDetailsForm}
        options={{ title: "Locality Details" ,headerBackTitle: "Back",}}
      />

      <Stack.Screen
        name="ResidentialPropertyDetailsForm"
        component={ResidentialPropertyDetailsForm}
        options={{ title: "Property Details" ,headerBackTitle: "Back"}}
...
        options={{ title: "Rent Details" ,headerBackTitle: "Back"}}
      />

      <Stack.Screen
        name="SellDetailsForm"
        component={SellDetailsForm}
        options={{ title: "Sell Details" ,headerBackTitle: "Back"}}
      />

      <Stack.Screen
        name="AddImages"
        component={AddImages}
        options={{ title: "Add Images" ,headerBackTitle: "Back"}}
      />
      <Stack.Screen
        name="AddNewPropFinalDetails"
        component={AddNewPropFinalDetails}
        options={{ title: "Final Details",headerBackTitle: "Back" }}
      />

      <Stack.Screen
        name="AddNewPropSellFinalDetails"
        component={AddNewPropSellFinalDetails}
        options={{ title: "Final Details" ,headerBackTitle: "Back"}}
...
