...
import Snackbar from "./../../components/SnackbarComponent";
import { setPropertyType, setPropertyDetails } from "./../../reducers/Action";
import CustomButtonGroup from "./../../components/CustomButtonGroup";


const selectedPropTypeOption = [
  { text: 'Residential' },
  { text: 'Commercial' },
];

const propertyForOption = [
  { text: 'Rent' },
  { text: 'Sell' },
...
            />


          </View>

          <View style={[styles.header, { marginTop: 30 }]}>
            <Text>Owner Details</Text>
          </View>
          <View style={styles.propSection}>
            <TextInput
              testID="ownerNameInput"
              label="Name*"
              value={ownerName}
...
